tests/functional/fixtures/ext/error/disabled/ext.php
<?php

class phpbb_ext_error_disabled_ext extends phpbb_extension_base
{
	
}
